# python-project-lvl3

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
page_loader/: __init__.py  page_loader.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: expected.html  fake_test.html
