[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Natalia Teplynina <nt@mnt9.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.pytest.ini_options]
pythonpath = [
  ".",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
